[gd_scene load_steps=11 format=3 uid="uid://cjmyr77mqsk3m"]

[ext_resource type="Texture2D" uid="uid://douqsrwk22nc4" path="res://assets/sprites/computerLogo.png" id="1_ks5hh"]
[ext_resource type="Script" uid="uid://crrbcxmf4p830" path="res://scenes/SG_splashScreen/sg_splash_screen.gd" id="1_vl1yx"]
[ext_resource type="FontFile" uid="uid://potga6gonxcv" path="res://assets/fonts/Pixel Game.otf" id="3_htpet"]
[ext_resource type="AudioStream" uid="uid://crd0fmwkwkp8s" path="res://assets/sounds/rahhh.mp3" id="4_htpet"]

[sub_resource type="Animation" id="Animation_vl1yx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4pn1o"]
resource_name = "turning_on"
length = 1.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.33333334, 0.4, 0.46666667, 0.53333336, 0.6, 0.6333333, 0.6666667, 0.7, 0.73333335, 0.76666665, 0.8, 0.8333333, 0.8666667, 0.9, 0.93333334, 0.96666664, 1, 1.0333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htpet"]
_data = {
&"RESET": SubResource("Animation_vl1yx"),
&"turning_on": SubResource("Animation_4pn1o")
}

[sub_resource type="Animation" id="Animation_htpet"]
resource_name = "appear_letters"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("name:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.33333334, 0.4, 0.46666667, 0.53333336, 0.6, 0.6666667, 0.73333335, 0.8, 0.8666667, 0.93333334, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.147, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.793, 0.85, 0.9, 0.95, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("name:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.4, 1.4666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(502, 118), Vector2(502, 70), Vector2(502, 118)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("name:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["[shake  rate=30 level=10]Sunflower
    Games", "[wave freq=7.5 amp=50]Sunflower
    Games"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3333334),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6cq47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("name:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("name:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(502, 118)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("name:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[shake]Sunflower
    Games"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvnr5"]
_data = {
&"RESET": SubResource("Animation_6cq47"),
&"appear_letters": SubResource("Animation_htpet")
}

[node name="SgSplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vl1yx")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(287.00003, 316)
scale = Vector2(5, 5)
texture = ExtResource("1_ks5hh")
hframes = 23

[node name="comp_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_htpet")
}

[node name="name" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43600002
anchor_top = 0.187
anchor_right = 1.0
anchor_bottom = 0.657
offset_left = -0.2720337
offset_top = -3.1760025
offset_bottom = 0.26400757
scale = Vector2(1.005, 1.005)
theme_override_fonts/normal_font = ExtResource("3_htpet")
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[shake]Sunflower
    Games"
visible_characters = 0
visible_ratio = 0.0

[node name="name_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kvnr5")
}

[node name="fade_courtain" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_htpet")
